# yolov8_object_detection

./: .gitignore  Download_TMS.py  Inference_Satellite.py  README.md  convert_images.py  convert_images_2024.py  convert_images_v2.py  inference.py  pyproject.toml  requirements.txt  save_to_footprints.py  utils.py
mipps/: 33577_all_taps_2018-09-26_13-21-24_modelbased_JPG.mipps
