[project]
name = "yolov8-object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyterlab>=4.3.5",
    "numpy>=2.2.3",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
    "typer-config>=1.4.2",
]
